Fix vertical align

--- a/src/blocks/column/editor.scss
+++ b/src/blocks/column/editor.scss
@@ -148,7 +148,6 @@
 		flex: 1;
 	}
 	>.wp-block-kadence-column {
-		flex: 1;
 		min-width: 0;
 		max-width: none;
 	}
